src/app/globals.scss
@use "../styles/variables" as v;

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
}
body {
  display: grid;
  min-height: 100vh;
  grid-template: 5.5rem 1fr 3.25rem / 1fr;
  background-color: v.$background-color;
  //max width for the pages
  & > div {
    max-width: 2000px;
  }
}
html {
  scroll-behavior: smooth;
}
::-webkit-scrollbar {
  display: none;
}

